--- a/flashcards/src/App.css
+++ b/flashcards/src/App.css
@@ -12,23 +12,52 @@ h1, h2, h3 {
   margin: 1% 0;
 }
 
-#flashcard {
-  display: flex;
-  align-items: stretch;
-  justify-content: center;
+.flashcard-container {
+  perspective: 1000px;
   width: 50%;
-  height: 250px;
+  max-width: 300px;
   margin: auto;
-  padding: 40px;
-
-  transform: rotate(0deg);
-  transform-origin: bottom left;
-  transition-property: transform;
-  transition-timing-function: ease-out;
-  transition-duration: .3s;
+  padding: 30px 0;
+  transform: translateY(0);
+  transition: transform 0.2s;
+  cursor: pointer;
 }
-#flashcard:hover {
-  transform: rotate(-3deg);
+.flashcard-container:hover {
+  transform: translateY(-15px);
+}
+
+#flashcard {
+  position: relative;
+  width: 100%;
+  height: 250px;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+  cursor: pointer;
+}
+
+#flashcard.flipped {
+  transform: rotateX(180deg);
+}
+
+.card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: rgba(255, 255, 255);
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5em;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  padding: 3%;
+}
+
+.card-face.back {
+  transform: rotateX(180deg);
 }
 
 button {
@@ -36,6 +65,25 @@ button {
   height: 100%;
   background-color: rgba(255, 255, 255, 0.931);
   color: darkblue;
+}
+
+img {
+  width: 50%;
+  height: 50%;
+  margin: 3%;
+  border-radius: 10px;
+}
+
+.red {
+  background-color: rgb(255, 120, 120);
+}
+
+.yellow {
+  background-color: rgb(255, 255, 131);
+}
+
+.green {
+  background-color: rgb(129, 255, 129);;
 }
 
 #nextButton {
@@ -48,32 +96,4 @@ button {
 #nextButton:hover {
   transform: translateX(15px);
   background-color: greenyellow; 
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
